--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 <!--
+
 body {
 	font: 100%/1.4 Verdana, Arial, Helvetica, sans-serif;
 	background-color: #4E5869;
@@ -133,5 +134,17 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus { /* this changes the background
 .question p + p {
     display:block;
 	float:inherit;
+}
+@media all {
+	.page-break	{ display: none; }
+	.sidebar1 { display:block; }
+	.footer { display:block; }
+}
+
+@media print {
+	.page-break	{ display: block; page-break-before: always; }
+	.sidebar1 { display:none; }
+	.footer {display:none; }
+	.content{ font-size:12px }
 }
 -->
